# mcp-server

./: .env.example  .gitignore  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  aws-setup.sh  build.sh  docker-compose.yml  install.bat  install.sh  installer.py  pyproject.toml  requirements.txt  smithery.json  smithery.yaml
.github/workflows/: build-installer.yml  deploy.yml  release.yml
infrastructure/: README.md  main.tf  terraform.tfvars
infrastructure/modules/aws/: main.tf
infrastructure/modules/generic/: main.tf
installer/: .gitignore  BUILD.md  CODESIGNING_SETUP.md  MISSING_SECRETS.md  README.md  RELEASE_CHECKLIST.md  auth.py  build.py  config_editor.py  entitlements.plist  generate_favicon.py  installer.py  requirements.txt  sprout_icon.icns
src/: requirements.txt
src/plantos_mcp/: server.py
