[project]
name = "plantos-mcp-server"
version = "1.0.0"
description = "MCP server exposing Plantos agricultural intelligence API as tools for Claude and other AI assistants"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
plantos-mcp = "plantos_mcp_server:main"
